@@ -15,16 +15,15 @@ import dk.medcom.video.api.organisation.OrganisationStrategy;
 import dk.medcom.video.api.organisation.model.OrganisationTree;
 import dk.medcom.video.api.organisation.OrganisationTreeServiceClient;
 import dk.medcom.video.api.service.*;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 
 import java.util.*;
 
 import static dk.medcom.video.api.helper.TestDataHelper.createMeetingUser;
-import static junit.framework.TestCase.assertNull;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.times;
 
 public class SchedulingInfoServiceImplTest {
@@ -55,7 +54,7 @@ public class SchedulingInfoServiceImplTest {
     private SchedulingInfoEventPublisher schedulingInfoEventPublisher;
     private PoolFinderService poolFinderService;
 
-    @Before
+    @BeforeEach
     public void setupMocks() throws RessourceNotFoundException, PermissionDeniedException {
         auditService = Mockito.mock(AuditService.class);
 
@@ -102,8 +101,8 @@ public class SchedulingInfoServiceImplTest {
         poolFinderService = Mockito.mock(PoolFinderService.class);
     }
 
-    @Test(expected = RessourceNotFoundException.class)
-    public void testUpdateSchedulingInfoNotFound() throws RessourceNotFoundException, PermissionDeniedException {
+    @Test
+    public void testUpdateSchedulingInfoNotFound() {
         SchedulingInfoServiceImpl schedulingInfoService = new SchedulingInfoServiceImpl(schedulingInfoRepository,
                 null,
                 null,
@@ -121,7 +120,7 @@ public class SchedulingInfoServiceImplTest {
                 null,
                 "");
 
-        schedulingInfoService.updateSchedulingInfo(UUID.randomUUID().toString(), new Date(), 12345L, 2341L);
+        assertThrows(RessourceNotFoundException.class, () -> schedulingInfoService.updateSchedulingInfo(UUID.randomUUID().toString(), new Date(), 12345L, 2341L));
     }
 
     @Test
@@ -403,8 +402,8 @@ public class SchedulingInfoServiceImplTest {
         Mockito.verify(schedulingInfoRepository, times(1)).save(schedulingInfoServiceArgumentCaptor.capture());
         SchedulingInfo capturedSchedulingInfo = schedulingInfoServiceArgumentCaptor.getValue();
 
-        assertTrue("Host pin should be greater than 0.", capturedSchedulingInfo.getHostPin() > 0);
-        assertTrue("Guest pin should be greater than 0.", capturedSchedulingInfo.getGuestPin() > 0);
+        assertTrue(capturedSchedulingInfo.getHostPin() > 0, "Host pin should be greater than 0.");
+        assertTrue(capturedSchedulingInfo.getGuestPin() > 0, "Guest pin should be greater than 0.");
         assertNotNull(capturedSchedulingInfo.getUriWithoutDomain());
 
         assertEquals(schedulingTemplateIdOne.getUriPrefix() + capturedSchedulingInfo.getUriWithoutDomain() + '@' + schedulingTemplateIdOne.getUriDomain(), capturedSchedulingInfo.getUriWithDomain());
@@ -557,30 +556,30 @@ public class SchedulingInfoServiceImplTest {
         Mockito.verify(customUriValidator, times(1)).validate(createMeetingDto.getUriWithoutDomain());
     }
 
-    @Test(expected = NotValidDataException.class)
-    public void testCanNotCreateSchedulingInfoOnNonExistingSchedulingTemplate() throws NotValidDataException, PermissionDeniedException, NotAcceptableException {
+    @Test
+    public void testCanNotCreateSchedulingInfoOnNonExistingSchedulingTemplate() {
         CreateSchedulingInfoDto input = new CreateSchedulingInfoDto();
         input.setOrganizationId(POOL_ORG);
         input.setSchedulingTemplateId(10L);
 
         SchedulingInfoServiceImpl schedulingInfoService = createSchedulingInfoService();
 
-        schedulingInfoService.createSchedulingInfo(input);
+        assertThrows(NotValidDataException.class, () -> schedulingInfoService.createSchedulingInfo(input));
     }
 
-    @Test(expected = NotValidDataException.class)
-    public void testCanNotCreateSchedulingInfoOnSchedulingTemplateForOtherOrg() throws NotValidDataException, PermissionDeniedException, NotAcceptableException {
+    @Test
+    public void testCanNotCreateSchedulingInfoOnSchedulingTemplateForOtherOrg() {
         CreateSchedulingInfoDto input = new CreateSchedulingInfoDto();
         input.setOrganizationId(POOL_ORG);
         input.setSchedulingTemplateId(SCHEDULING_TEMPLATE_ID_OTHER_ORG);
 
         SchedulingInfoServiceImpl schedulingInfoService = createSchedulingInfoService();
 
-        schedulingInfoService.createSchedulingInfo(input);
+        assertThrows(NotValidDataException.class, () -> schedulingInfoService.createSchedulingInfo(input));
     }
 
     @Test
-    public void testAttachMeetingToSchedulingInfo() throws NotValidDataException, NotAcceptableException, PermissionDeniedException {
+    public void testAttachMeetingToSchedulingInfo() throws PermissionDeniedException {
         var organisation = createOrganisation();
         Mockito.when(meetingUserService.getOrCreateCurrentMeetingUser()).thenReturn(createMeetingUser(organisation));
 
@@ -613,7 +612,7 @@ public class SchedulingInfoServiceImplTest {
     }
 
     @Test
-    public void testAttachMeetingToSchedulingInfoOverflowPool() throws NotValidDataException, NotAcceptableException, PermissionDeniedException {
+    public void testAttachMeetingToSchedulingInfoOverflowPool() throws PermissionDeniedException {
         Mockito.when(meetingUserService.getOrCreateCurrentMeetingUser()).thenReturn(createMeetingUser(createOrganisation()));
 
         UserContext userContext = new UserContextImpl(POOL_ORG, "test@test.dk", UserRole.ADMIN, null);
@@ -654,7 +653,7 @@ public class SchedulingInfoServiceImplTest {
     }
 
     @Test
-    public void testAttachMeetingToSchedulingInfoNoFreePool() throws NotValidDataException, NotAcceptableException, PermissionDeniedException {
+    public void testAttachMeetingToSchedulingInfoNoFreePool() {
         UserContext userContext = new UserContextImpl(POOL_ORG, "test@test.dk", UserRole.ADMIN, null);
         Mockito.when(userContextService.getUserContext()).thenReturn(userContext);
 
@@ -679,7 +678,7 @@ public class SchedulingInfoServiceImplTest {
     }
 
     @Test
-    public void testAttachMeetingToSchedulingInfoNoPoolOrganisation() throws NotValidDataException, NotAcceptableException, PermissionDeniedException {
+    public void testAttachMeetingToSchedulingInfoNoPoolOrganisation() {
         UserContext userContext = new UserContextImpl(NON_POOL_ORG, "test@test.dk", UserRole.ADMIN, null);
         Mockito.when(userContextService.getUserContext()).thenReturn(userContext);
 
@@ -713,8 +712,8 @@ public class SchedulingInfoServiceImplTest {
     }
 
 
-    @Test(expected = NotValidDataException.class)
-    public void testCanNotCreateSchedulingInfoOnNonPoolOrganisation() throws NotValidDataException, PermissionDeniedException, NotAcceptableException {
+    @Test
+    public void testCanNotCreateSchedulingInfoOnNonPoolOrganisation() {
         CreateSchedulingInfoDto input = new CreateSchedulingInfoDto();
         input.setOrganizationId(NON_POOL_ORG);
         input.setSchedulingTemplateId(2L);
@@ -737,11 +736,11 @@ public class SchedulingInfoServiceImplTest {
                 null,
                 "");
 
-        schedulingInfoService.createSchedulingInfo(input);
+        assertThrows(NotValidDataException.class, () -> schedulingInfoService.createSchedulingInfo(input));
     }
 
-    @Test(expected = NotValidDataException.class)
-    public void testCanNotCreateSchedulingInfoOnNonExistingOrganisation() throws NotValidDataException, PermissionDeniedException, NotAcceptableException {
+    @Test
+    public void testCanNotCreateSchedulingInfoOnNonExistingOrganisation() {
         CreateSchedulingInfoDto input = new CreateSchedulingInfoDto();
         input.setOrganizationId("non existing org");
         input.setSchedulingTemplateId(2L);
@@ -764,66 +763,12 @@ public class SchedulingInfoServiceImplTest {
                 null,
                 "");
 
-        schedulingInfoService.createSchedulingInfo(input);
+        assertThrows(NotValidDataException.class, () -> schedulingInfoService.createSchedulingInfo(input));
         Mockito.verifyNoMoreInteractions(auditService);
     }
 
-//    @Test
-//    public void testGetUnusedSchedulingInfoForOrganisation() {
-//        Organisation organisation = new Organisation();
-//        organisation.setId(1234L);
-//        organisation.setName("this is org name");
-//        organisation.setOrganisationId("RH");
-//        organisation.setPoolSize(10);
-//
-//        SchedulingInfoServiceImpl schedulingInfoService = createSchedulingInfoService();
-//        Mockito.when(schedulingInfoRepository.findByMeetingIsNullAndOrganisationAndProvisionStatus(
-//                Mockito.eq(organisation.getId()),
-//                Mockito.eq(ProvisionStatus.PROVISIONED_OK.name()),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any())).thenReturn(Collections.singletonList(BigInteger.ONE));
-//
-//        Long schedulingInfo = schedulingInfoService.getUnusedSchedulingInfoForOrganisation(organisation, null);
-//        assertNotNull(schedulingInfo);
-//    }
-//
-//    @Test
-//    public void testGetUnusedSchedulingInfoForOrganisationNoMoreUnused() {
-//        Organisation organisation = new Organisation();
-//        organisation.setId(1234L);
-//        organisation.setName("this is org name");
-//        organisation.setOrganisationId("RH");
-//        organisation.setPoolSize(10);
-//
-//        SchedulingInfoServiceImpl schedulingInfoService = createSchedulingInfoService();
-//        Mockito.when(schedulingInfoRepository.findByMeetingIsNullAndOrganisationAndProvisionStatus(
-//                Mockito.eq(organisation.getId()),
-//                Mockito.eq(ProvisionStatus.PROVISIONED_OK.name()),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any(),
-//                Mockito.any())).thenReturn(Collections.emptyList());
-//
-//        Long schedulingInfo = schedulingInfoService.getUnusedSchedulingInfoForOrganisation(organisation, null);
-//        assertNull(schedulingInfo);
-//    }
-
     @Test
-    public void testAttachMeetingToSchedulingInfoMicrophoneOff() throws NotValidDataException, NotAcceptableException, PermissionDeniedException {
+    public void testAttachMeetingToSchedulingInfoMicrophoneOff() throws PermissionDeniedException {
         Mockito.when(meetingUserService.getOrCreateCurrentMeetingUser()).thenReturn(createMeetingUser(createOrganisation()));
 
         var schedulingInfo = createSchedulingInfo();
@@ -854,7 +799,7 @@ public class SchedulingInfoServiceImplTest {
     }
 
     @Test
-    public void testAttachMeetingToSchedulingInfoMicrophoneMuted() throws NotValidDataException, NotAcceptableException, PermissionDeniedException {
+    public void testAttachMeetingToSchedulingInfoMicrophoneMuted() throws PermissionDeniedException {
         Mockito.when(meetingUserService.getOrCreateCurrentMeetingUser()).thenReturn(createMeetingUser(createOrganisation()));
 
         var schedulingInfo = createSchedulingInfo();
@@ -916,15 +861,15 @@ public class SchedulingInfoServiceImplTest {
         assertNotNull(schedulingInfo.getReservationId());
     }
 
-    @Test(expected = RessourceNotFoundException.class)
-    public void testReserveSchedulingInfoNoFree() throws RessourceNotFoundException {
+    @Test
+    public void testReserveSchedulingInfoNoFree() {
         UserContext userContext = new UserContextImpl("poolOrg", "test@test.dk", UserRole.ADMIN, null);
         Mockito.when(userContextService.getUserContext()).thenReturn(userContext);
 
         Mockito.reset(schedulingInfoRepository);
         var schedulingInfoService = createSchedulingInfoService();
 
-        schedulingInfoService.reserveSchedulingInfo(VmrType.lecture,
+        assertThrows(RessourceNotFoundException.class, () -> schedulingInfoService.reserveSchedulingInfo(VmrType.lecture,
                 ViewType.one_main_zero_pips,
                 ViewType.four_mains_zero_pips,
                 VmrQuality.fullhd,
@@ -932,7 +877,7 @@ public class SchedulingInfoServiceImplTest {
                 true,
                 true,
                 false,
-                false);
+                false));
     }
 
     @Test
@@ -948,14 +893,14 @@ public class SchedulingInfoServiceImplTest {
         Mockito.verify(schedulingInfoRepository, times(1)).findOneByReservationId(reservationId.toString());
     }
 
-    @Test(expected = RessourceNotFoundException.class)
-    public void testGetSchedulingInfoByReservationNotFound() throws RessourceNotFoundException {
+    @Test
+    public void testGetSchedulingInfoByReservationNotFound() {
         UserContext userContext = new UserContextImpl("poolOrg", "test@test.dk", UserRole.ADMIN, null);
         Mockito.when(userContextService.getUserContext()).thenReturn(userContext);
 
         var schedulingInfoService = createSchedulingInfoService();
 
-        schedulingInfoService.getSchedulingInfoByReservation(UUID.randomUUID());
+        assertThrows(RessourceNotFoundException.class, () -> schedulingInfoService.getSchedulingInfoByReservation(UUID.randomUUID()));
     }
 
     @Test
@@ -970,7 +915,7 @@ public class SchedulingInfoServiceImplTest {
 
         var result = schedulingInfoService.getSchedulingInfoAwaitsProvision();
         assertEquals(1, result.size());
-        assertEquals(schedulingInfo2, result.get(0));
+        assertEquals(schedulingInfo2, result.getFirst());
     }
 
     @Test
@@ -983,7 +928,7 @@ public class SchedulingInfoServiceImplTest {
 
         var result = schedulingInfoService.getSchedulingInfoAwaitsDeProvision();
         assertEquals(1, result.size());
-        assertEquals(schedulingInfo2, result.get(0));
+        assertEquals(schedulingInfo2, result.getFirst());
     }
 
     private SchedulingInfo createSchedulingInfo(boolean newProvisioner) {
